--- a/index.html
+++ b/index.html
@@ -175,5 +175,20 @@
         </td>
       </tr>
     </table>
+
+<script type="text/javascript">
+  var sc_project=13095223; 
+  var sc_invisible=1; 
+  var sc_security="81dad941"; 
+  </script>
+  <script type="text/javascript"
+  src="https://www.statcounter.com/counter/counter.js"
+  async></script>
+  <noscript><div class="statcounter"><a title="Web Analytics"
+  href="https://statcounter.com/" target="_blank"><img
+  class="statcounter"
+  src="https://c.statcounter.com/13095223/0/81dad941/1/"
+  alt="Web Analytics"
+  referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
   </body>
 </html>
