feat: adding google metadata

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="google-site-verification" content="AJdIbSUuyaf8TB9zoUqVgaS7H50dKUfTbojkU1XQIJI">
 
-    <title>André Sacilotti | Computer Vision Researcher | Video Understanding</title>
+    <title>André Sacilotti | Computer Vision Researcher</title>
 
     <meta name="author" content="André Sacilotti">
     <meta name="viewport" content="width=device-width, initial-scale=1">
