feat: adding some seo metadata

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="google-site-verification" content="AJdIbSUuyaf8TB9zoUqVgaS7H50dKUfTbojkU1XQIJI">
+    <meta name="google-site-verification" content="CnPspHdl1oip7IfILoCe5FmpTXhOVu4bstLVSULaNgA" />
 
     <title>André Sacilotti | Computer Vision Researcher</title>
 
