--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <p class="name" style="text-align: center;">
                   André Sacilotti
                 </p>
-                <p>I'm currently a senior undergraduate student in Statistics at <a href="https://www.icmc.usp.br/en/">University of São Paulo (USP)</a>. I also work as a research scientist at <a href="https://visio.ai/">Visio.ai</a></p>
+                <p>I'm currently a final-year undergraduate student in Statistics at <a href="https://www.icmc.usp.br/en/">University of São Paulo (USP)</a>. I also work as a research scientist at <a href="https://visio.ai/">Visio.ai</a></p>
                 <p>
                   I'm pleased to be advised by Prof.  <a href="https://jurandy-almeida.netlify.app/">Jurandy Almeida</a> in the <a href="https://lasid.dcomp.ufscar.br/">LaSID</a> research group, researching about video understanding and unsupervised domain adaptation.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:andre.sacilotti@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/AndreSacilotti-CV.pdf">CV (soon)</a> &nbsp;/&nbsp;
+                  <a href="data/AndreSacilotti-CV.pdf">Resume (soon)</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=xBquKMgAAAAJ&hl=en&authuser=1">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/andre-sacilotti/">Linkedin</a> &nbsp;/&nbsp;
                   <a href="https://x.com/AndreS11451">Twitter</a> &nbsp;/&nbsp;
